--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           registry: registry-1.docker.io
           username: ${{secrets.DOCKERHUBUSERNAME}}
-          password: ${{secrets.DOCKERHUBPASSWORD}
+          password: ${{secrets.DOCKERHUBPASSWORD}}
 
     
     
